# likely

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  LICENSE.txt  LikelyConfig.cmake  README.md  benchmark.cpp  benchmark.csv  benchmark.tsv  bootstrap.sh  create.cpp  dream.cpp  dream.qrc  index.html  likely.cpp  likely.h  likely_script.cpp  opencv.shim  standard.likely
app/: CMakeLists.txt  benchmark.cpp  dream.cpp
data/: README.md
examples/: arithmetic.likely  closures.likely  currying.likely  function_calls.likely  hello_world.likely  mandelbrot_set.likely  table_of_contents.likely
img/: img.qrc
include/: likely.h  likely_aux.h  likely_script.h
include/likely/: backend.h  frontend.h  io.h  likely_aux.h  likely_backend.h  likely_compiler.h  likely_core.h  likely_export.h  likely_frontend.h  likely_io.h  likely_runtime.h  likely_script.h  opencv.hpp  runtime.h  timer.hpp
ir/benchmarks/: average_f32X_f32XY.ll  average_f32X_f32XY_m.ll  average_f32X_i16SXY.ll  average_f32X_i16SXY_m.ll  average_f32X_i16XY.ll  average_f32X_i16XY_m.ll  average_f32X_u8SXY.ll  average_f32X_u8SXY_m.ll  average_f32X_u8XY.ll  average_f32X_u8XY_m.ll  average_f64X_f64XY.ll  average_f64X_f64XY_m.ll  binary_threshold_f32CXY__f32CXY_f32_f32_.ll  binary_threshold_f32CXY__f32CXY_f32_f32__m.ll  binary_threshold_i16SCXY__i16SCXY_i16S_i16S_.ll  binary_threshold_i16SCXY__i16SCXY_i16S_i16S__m.ll  binary_threshold_u8SCXY__u8SCXY_u8S_u8S_.ll  binary_threshold_u8SCXY__u8SCXY_u8S_u8S__m.ll  convert_grayscale_f32CXY_f32CXY.ll  convert_grayscale_f32CXY_f32CXY_m.ll  convert_grayscale_f32XY_f32CXY.ll  convert_grayscale_f32XY_f32CXY_m.ll  convert_grayscale_u16SCXY_u16SCXY.ll  convert_grayscale_u16SCXY_u16SCXY_m.ll  convert_grayscale_u16SXY_u16SCXY.ll  convert_grayscale_u16SXY_u16SCXY_m.ll  convert_grayscale_u8SCXY_u8SCXY.ll  convert_grayscale_u8SCXY_u8SCXY_m.ll  convert_grayscale_u8SXY_u8SCXY.ll  convert_grayscale_u8SXY_u8SCXY_m.ll  convolution_f32XY__f32XY_f32XY_i32_i32_.ll  convolution_f32XY__f32XY_f32XY_i32_i32__m.ll  covariance_f32XY_f32XY.ll  covariance_f32XY_f32XY_m.ll  covariance_f32XY_i16SXY.ll  covariance_f32XY_i16SXY_m.ll  covariance_f32XY_i16XY.ll  covariance_f32XY_i16XY_m.ll  covariance_f32XY_u8SXY.ll  covariance_f32XY_u8SXY_m.ll  (+98 more)
ir/demos/: average_face-m.ll  average_face.ll  gabor_wavelet-m.ll  gabor_wavelet.ll  mandelbrot_set-m.ll  mandelbrot_set.ll
script/: arithmetic.likely  closures.likely  comments.likely  currying.likely  demos.likely  examples.likely  function_calls.likely  hello_world.likely  mandelbrot_set.likely  standard.likely
share/likely/: LikelyConfig.cmake  opencv.shim  standard.likely
share/likely/hello_world/: CMakeLists.txt  README.l  README.ll  README.md  hello-world-compiled.lisp  hello-world-main.lisp  hello-world-trained.lisp  hello-world.lisp  hello_world_div2.l  hello_world_div2.ll  hello_world_jit.c  hello_world_precompiled.c  hello_world_static.c  hello_world_static.lisp  hello_world_trained.c
share/likely/model_translation/: CMakeLists.txt  README.md  eigenfaces-api.lisp  eigenfaces-def.lisp  eigenfaces.lisp  eigenfaces_model_translator.c
src/: CMakeLists.txt  Doxyfile.in  assumption_substitution.cpp  axis_substitution.cpp  backend.cpp  benchmark.cpp  cuda.cpp  dream.cpp  embedfile.c  frontend.cpp  hello_world.c  io.cpp  like.c  like.cpp  likely.cpp  likely_aux.cpp  likely_backend.cpp  likely_compiler.cpp  likely_core.cpp  likely_frontend.cpp  likely_io.cpp  likely_runtime.cpp  likely_script.cpp  loop_collapse.cpp  main.c  memory_management.cpp  opencv.cpp  opencv.shim  runtime.c  runtime.cpp  runtime_common.c  runtime_common.cpp  runtime_stdthread.cpp  standard.likely  test.cpp
tests/: CMakeLists.txt  madd.cpp  test.cpp  test.h
